<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/mainText"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_above="@+id/Button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Button01" />

    />
    
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_toLeftOf="@+id/Button01"
        android:text="@string/tracking_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="startLocating"
        android:text="@string/button_track" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button01"
        android:layout_alignBottom="@+id/Button01"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/shop_number"
        android:text="@string/ID" />

    <!-- <Button
        android:id="@+id/Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button2"
        android:layout_alignBottom="@+id/Button2"
        android:layout_alignLeft="@+id/mainText"
        android:onClick="scanWifi"
        android:text="@string/button_scan" /> -->

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_toRightOf="@+id/button4"
        android:onClick="stopLocating"
        android:text="@string/button_table" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button3"
        android:layout_below="@+id/text1"
        android:layout_toRightOf="@+id/spinner1"
        android:drawSelectorOnTop="true"
        android:prompt="@string/item_prompt1" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinner2"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/button4"
        android:prompt="@string/item_prompt2" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button4"
        android:layout_below="@+id/spinner2"
        android:layout_marginTop="16dp"
        android:onClick="pushData"
        android:text="@string/button_push" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/mainText"
        android:layout_alignTop="@+id/shop_number"
        android:onClick="sendMessage"
        android:text="@string/button_save" />

    <EditText
        android:id="@+id/shop_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button01"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/Button2"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="number" />

</RelativeLayout>